

@startuml

skinparam monochrome false
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype ortho

top to bottom direction

skinparam classAttributeIconSize 0

skinparam class {
    LifeLineBorderColor DarkBlue
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #F0FF99
    ArrowColor grey
    BorderColor black
}

skinparam card {
    LifeLineBorderColor Green
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #F0FFDD
    ArrowColor DarkGrey
    BorderColor Black
}


hide methods

title Domain Model



skinparam packageStyle rectangle


package "Job Opening" {

class JobOpening <<Root Entity>>
class JobReference <<Identifier>>
class Address <<Value Object>>
class ContractType <<Value Object>>
class Description <<Value Object>>
class Mode <<Value Object>>
class TitleOrFunction <<Value Object>>
class VacanciesNumber <<Value Object>>

}
'
'package "Phases" {
'
'class Phase <<Root Entity>>
'class PhaseData <<Value Object>>
'
'}
'
'package "Plug-in" {
'class Plugin <<Root Entity>>
'class JarFile <<Value Object>>
'class PluginDescription <<Value Object>>
'class PluginID <<Identifier>>
'class InterviewModel <<Value Object>>
'class RequirementsSpecification <<Value Object>>
'}
'
'package "Job Offer Application" {
'
'class Application <<Root Entity>>
'class ApplicationID <<Identifier>>
'class ApplicationStatus <<Value Object>>
'class AnalyzedRequirements <<Value Object>>
'class ReportFiles <<Value Object>>
'
'}
'
'package "ApplicationFeedback"{
'class InterviewFeedback <<Entity>>
'}
'
'package "Customer Manager" {
'
'class CustomerManager <<Root Entity>>
'class CustomerManagerID <<Identifier>>
'class Company <<Value Object>>
'
'}
'
'package "Application Candidate" {
'
'class Candidate <<Root Entity>>
'class CandidateID <<Identifier>>
'
'}
'
'package "Clients" {
'class ClientID <<Identifier>>
'class Client <<Root Entity>>
'}



JobOpening "1" --> "1" Address
JobOpening "1" --> "*" ContractType
JobOpening "1" --> "1" Description
JobOpening "1" --> "1" JobReference
JobOpening "1" --> "*" Mode
JobOpening "1" --> "1" TitleOrFunction
JobOpening "1" --> "1" VacanciesNumber


'
'CustomerManager "1" --> "*" Company
'CustomerManager "1" --> "1" CustomerManagerID
'
'CustomerManager "1" --> "*" JobOpening : manage >
'
'
'Client "1" --> "*" JobOpening : submits >
'
'JobOpening "0..1" ---> "0..1" InterviewDescription : has >
'JobOpening "1" --> "1" Report : >
'JobOpening "1" <-- "1" Application : >
'
'
'
'Report "1" --> "*" ReportFiles : originates >
'
'Application "1" --> "1" InterviewFeedback :  >
'Application "1" --> "1" AnalyzedRequirements :  >
'Application "1" --> "1" ApplicationStatus : >
'Application "1" --> "*" ReportFiles : >
'ApplicationID "1" --> "1" Application : <
'
'Candidate "1" --> "*" Application : makes >
'Candidate "1" --> "1" CandidateID :  >
'
'Plugin "1" --> "1" PluginDescription :  >
'Plugin "1" --> "1" JarFile :  >
'Plugin "1" --> "1" PluginID :  >
'
'Plugin <|-- InterviewModel : extends
'Plugin <|-- RequirementsSpecification : extends
'
'JobOpening "1" --> "0..1" InterviewModel : >
'JobOpening "1" --> "1" RequirementsSpecification : >
'
'CustomerManager "1" --> "*" Application : list >
'
'CustomerManager "1" --> "*" Candidate :  >
'
'JobOpening "1" --> "4..5" Phase : >
'
'Phase "1" --> "1" PhaseData
'
'Client "1" --> "1" ClientID

@enduml